# nptool

./: .clang-format  .gitignore  .gitlab-ci.yml  README.md
Dockerfile/: gitlabci-nptool-ubuntu19.04
Documentation/: myNotes.txt  user_guide.fdb_latexmk  user_guide.fls
Examples/Example1/: Analysis.cxx  ShowResults.C
Examples/Example5/: CheckSimu.C  Example5.detector  Example5.reaction  PhysicsListOption.txt
Inputs/CrossSection/: sofia.txt
Inputs/DetectorConfiguration/: Exogam.detector  Miniball.detector  plastic.detector
Inputs/EventGenerator/: Example1.reaction  TransferInducedFission.reaction  alpha.source  fusion.reaction  gamma.source  isotropic.source  neutron.source  np.source  proton.source  sofia.reaction  sofia_238U.reaction
NPLib/: CMakeLists.txt
NPLib/Calibration/: NPCalibrationSource.cxx  NPCalibrationSource.h  NPSiliconCalibrator.cxx  NPSiliconCalibrator.h
NPLib/Core/: CMakeLists.txt  NPCalibrationManager.cxx  NPCalibrationManager.h  NPDetectorManager.cxx  NPDetectorManager.h  NPInputParser.cxx  NPInputParser.h  NPOptionManager.cxx  NPOptionManager.h  NPSpectraServer.cxx  NPVDetector.h  NPXmlParser.cxx  NPXmlParser.h  RootInput.cxx  RootInput.h  RootOutput.cxx
NPLib/Detectors/BigRIPS/: BigRIPSPPACVariables.h  BigRIPSPlasticVariables.h  CMakeLists.txt  TBigRIPSICPhysics.cxx  TBigRIPSPPACData.cxx  TBigRIPSPPACData.h  TBigRIPSPPACPhysics.cxx  TBigRIPSPPACPhysics.h  TBigRIPSPlasticPhysics.cxx  TBigRIPSPlasticPhysics.h  TBigRIPSReco.cxx  TBigRIPSReco.h
NPLib/Detectors/Hicari/: CMakeLists.txt  THicariData.cxx  THicariData.h  THicariPhysics.cxx  THicariPhysics.h  THicariSpectra.cxx  THicariSpectra.h
NPLib/Detectors/Iss/: CMakeLists.txt  TIssData.cxx  TIssData.h  TIssPhysics.cxx  TIssPhysics.h  TIssSpectra.cxx  TIssSpectra.h
NPLib/Detectors/Iss/ressources/: Mask.cxx  MaskIssFrontcxx  ReadMe
NPLib/Detectors/Minos/: CMakeLists.txt  MinosUtility.cxx  MinosUtility.h  TMinosData.h  TMinosPhysics.cxx  TMinosPhysics.h  TMinosSpectra.cxx
NPLib/Detectors/NebulaPlus/: CMakeLists.txt  TNebulaPlusData.cxx  TNebulaPlusData.h  TNebulaPlusPhysics.cxx  TNebulaPlusPhysics.h  TNebulaPlusSpectra.cxx  TNebulaPlusSpectra.h
NPLib/Detectors/QQQ3/: CMakeLists.txt  TQQQ3Data.cxx  TQQQ3Data.h  TQQQ3Physics.cxx  TQQQ3Physics.h
NPLib/Detectors/SAMURAI/: CMakeLists.txt  TSAMURAIData.cxx  TSAMURAIData.h  TSAMURAIPhysics.cxx  TSAMURAIPhysics.h  TSAMURAISpectra.cxx  TSAMURAISpectra.h
NPLib/Detectors/Samurai/: CMakeLists.txt  SamuraiDCIndex.h  SamuraiFieldMap.cxx  SamuraiFieldMap.h  TSamuraiBDCPhysics.cxx  TSamuraiBDCPhysics.h  TSamuraiFDC0Data.h  TSamuraiFDC0Physics.cxx  TSamuraiFDC0Physics.h  TSamuraiFDC2Data.cxx  TSamuraiFDC2Data.h  TSamuraiFDC2Physics.cxx  TSamuraiFDC2Physics.h  TSamuraiHodoscopeData.h  TSamuraiHodoscopePhysics.cxx  TSamuraiHodoscopePhysics.h  TSamuraiIdealData.cxx  TSamuraiIdealData.h  TSamuraiMagnetPhysics.cxx  TSamuraiMagnetPhysics.h
NPLib/Detectors/Scone/: CMakeLists.txt  TSconeData.cxx  TSconeData.h  TSconePhysics.cxx  TSconePhysics.h
NPLib/Detectors/Sofia/: CMakeLists.txt  GladFieldMap.cxx  GladFieldMap.h  TSofAtPhysics.cxx  TSofBeamID.cxx  TSofBeamID.h  TSofFissionFragment.cxx  TSofFissionFragment.h  TSofMwpcPhysics.cxx  TSofMwpcPhysics.h  TSofSciData.h  TSofSciPhysics.cxx  TSofSciPhysics.h  TSofTofWPhysics.cxx  TSofTofWPhysics.h  TSofTrimPhysics.cxx  TSofTrimPhysics.h  TSofTwimPhysics.cxx  TSofTwimPhysics.h  TSofiaData.cxx  TSofiaData.h  TSofiaPhysics.cxx  TSofiaPhysics.h  TSofiaSpectra.cxx  TSofiaSpectra.h
NPLib/Detectors/SuperX3/: CMakeLists.txt  TSuperX3Data.cxx  TSuperX3Data.h  TSuperX3Physics.cxx  TSuperX3Physics.h  TSuperX3Spectra.cxx  TSuperX3Spectra.h
NPLib/Detectors/Vendeta/: CMakeLists.txt  TVendetaData.cxx  TVendetaData.h  TVendetaPhysics.cxx  TVendetaPhysics.h  TVendetaSpectra.cxx  TVendetaSpectra.h
NPLib/Detectors/sofia/: CMakeLists.txt  TsofiaData.h
NPLib/Neutron/: NPCrossTalk.cxx  NPCrossTalk.h
NPLib/Physics/: CMakeLists.txt  GEF.cxx  GEF.h  NPBeam.cxx  NPBeam.h  NPEnergyLoss.cxx  NPFissionDecay.cxx  NPFissionDecay.h  NPFunction.cxx  NPNucleus.cxx  NPNucleus.h  NPParticle.cxx  NPParticle.h  NPPhaseSpace.cxx  NPPhaseSpace.h  NPPhaseSpaceLinkDef.h  NPQFS.cxx  NPQFS.h  NPReaction.cxx  NPReaction.h  TInteractionCoordinates.h  TReactionConditions.cxx  TReactionConditions.h  nubtab16.asc
NPLib/TrackReconstruction/: CMakeLists.txt  DCTest.cxx  NPDCReconstruction.cxx  NPDCReconstruction.h  NPDCReconstructionMT.cxx  NPDCReconstructionMT.h  NPLinearRansac3D.cxx  NPTrackReconstructionLinkDef.h  NPTrackingUtility.h  Tracking.cxx  Tracking.h
NPLib/Utility/: npspectra_test.cxx  nptool-installer.cxx
NPLib/scripts/: NPToolLogon.C  build_dict.sh.in
NPSimulation/: CMakeLists.txt  Simulation.cc
NPSimulation/Detectors/Sofia/: CMakeLists.txt  SofTofW.cc  SofTofW.hh  SofTwim.cc  SofTwim.hh  Sofia.cc  Sofia.hh
NPSimulation/Detectors/Sofia/gdml/: glad.gdml
Projects/ComptonTelescope/online/: CMakeLists.txt  CanvasList.txt  ComptonCAM.detector  ComptonCAM_ini.detector  DecodeR.h  calibrations.txt  elog.txt
Projects/ComptonTelescope/online/Calibration_DSSSD/: Analyse207Bi.C  DSSSD_calibration_v1_p0p1.txt  DSSSD_calibration_v1_p1p0.txt  EnergyCalibrator.C  EnergyCalibrator.h  ExtractRawHisto_DSSSD_E.C  FitSpectrumCalib.C  fit_param_backStrip.txt  fit_param_frontStrip.txt  graph_calib_207Bi_spectrum.root  graph_calib_207Bi_spectrum_v1.root  peak_param.txt
Projects/ComptonTelescope/online/Calibration_DSSSD/Histograms/: 20200128_10h44_bi207_conv_RawDSSSDHistos.root  20200128_10h44_bi207_conv_RawDSSSDHistos_v1.root  Fit_207Bi_spectrum_v1.root
Projects/ComptonTelescope/online/calibrations/: CeBr3_E.txt  CeBr3_PED.txt  CeBr3_PED3.txt  CeBr3_PED4.txt  CeBr3_mod4_CoeffAlign.txt  CeBr3_mod4_calibE.txt  DSSSD_D1_Calibration_run10_newCal.txt  DSSSD_D1_Calibration_run5.txt  DSSSD_calibration.txt  DSSSD_calibration_withPed_pol3_ok.txt
Projects/ComptonTelescope/online/src/: CMakeLists.txt  DecodeD.cpp  DecodeD.h  DecodeR.cpp  DecodeR.h  DecodeT.cpp  DecodeT.h  online.C  online.cpp  online_coinc.cpp  online_dsssd.cpp
Projects/S034/: Z.cxx  (+8 more)
(+773 files in other folders)
